header align - fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -96,6 +96,11 @@ button:hover {
 .header__link {
   color: #fafafa;
 }
+@media screen and (min-width: 768px) {
+  .header__actions {
+    display: none;
+  }
+}
 .header__action {
   background: none;
   border: none;
